# markora

./: .gitignore  .prettierrc.json  README.md  SPEC.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/filesystem/: assets.rs  list.rs  mod.rs  ops.rs  read.rs  write.rs
src-tauri/src/search/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: ContextMenu.tsx  ErrorBoundary.tsx  Modal.tsx
src/features/command-palette/: CommandPalette.tsx  QuickOpen.tsx  commands.ts
src/features/editor/: EditorHost.tsx  ImageLightbox.tsx  PreviewPane.tsx  SourceEditor.tsx  WysiwygEditor.tsx  editorRegistry.ts  imageInsert.ts  modeSwitch.ts
src/features/export/: exportHtml.ts
src/features/outline/: OutlinePanel.tsx
src/hooks/: useAutosave.ts  useFileDrop.ts  useFsWatcher.ts  useGlobalShortcuts.ts
src/i18n/: index.ts
src/lib/: drag.ts  errors.ts  fuzzy.ts  id.ts  imageResolver.ts  mermaidRenderer.ts  outline.ts  path.ts  platform.ts  shikiHighlighter.ts  shortcuts.ts  stats.ts  tabs.ts  utils.ts  wordcount.ts
src/services/: actions.ts  backend.ts  openWith.ts  persistence.ts  session.ts
src/stores/: documents.ts  settings.ts  ui.ts  workspace.ts
src/styles/: global.css
src/types/: document.ts  index.ts  ipc.ts  settings.ts
(+10 files in other folders)
