[package]
name = "markora"
version = "0.1.0"
description = "Markora - local-first Markdown editor"
authors = ["Markora contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "markora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
notify = "6"
trash = "5"
walkdir = "2"
regex = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
